<resources>
    <string name="app_name">Gank-news</string>
    <string name="usual_approach">常规方式</string>
    <string name="reactive_approach">响应方式</string>

    <string name="menu_add">添加</string>
    <string name="menu_delete">删除</string>
    <string name="app_intro">News App</string>
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>
    <string name="setting_normal">常规</string>
    <string name="setting_cache">缓存设置</string>
    <string name="setting_image">无图浏览</string>
    <string name="setting_night">夜间模式</string>
    <string name="setting_other">其他</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_clear">清空缓存</string>
</resources>
